public/stylesheets/widgets.css
/* ... */
.netlogo-display-vertical {
  display:   flex;
  flex-flow: column;
}

.netlogo-display-vertical > .netlogo-tab-area {
  margin: 25px auto;
}

.netlogo-display-horizontal {
  display:        flex;
  flex-flow:      row;
  flex-direction: row;
  align-items:    unset;
}

.netlogo-display-horizontal > .netlogo-tab-area {
  margin:     0 10px;
  align-self: flex-start;
}

.netlogo-header {
  display:         flex;
  flex-flow:       row;
  align-items:     center;
  justify-content: space-between;
}

.netlogo-widget {
  box-sizing:       border-box;
  background-color: #eeeeee;
  border-radius:    var(--widget-outer-radius);
  overflow:         hidden;
}

.netlogo-widget:focus-visible,
.netlogo-slider-bar:focus-visible {
  outline: var(--color-widget-select-border) solid 2px;
}

.netlogo-button:focus-visible,
.netlogo-forever-button:focus-visible {
  outline: var(--color-widget-select-border) solid 3px;
}

.netlogo-command,
.netlogo-input {
  user-select:      none;
  -moz-user-select: none;
}

.netlogo-command:hover {
  filter: brightness(1.1);
  cursor: pointer;
}

.netlogo-command.netlogo-disabled:hover {
  box-shadow: none;
  cursor:     default;
}

.netlogo-tab-area {
  border:        2px solid;
  border-radius: 10px;
  /* In a prior version this was set dynamically to between 400-ish and 800-ish pixels.  It really only affected the
    code tab, and the effect it gave was more jankiness than user accomodation.  I decided just sticking to a static
    value works fine for now.  Eventually we should give users more direct control over size and placement of the tabs,
    but that's for future work.  */
  width:         760px;
  overflow:      hidden;
}

.netlogo-tab {
  display:    block;
  position:   relative;
  padding:    7px 30px 7px 7px;
  text-align: center;
  cursor:     pointer;
}

.netlogo-tab-caret {
  position:  absolute;
  right:     1em;
  top:       50%;
  transform: translateY(-50%);
  height:    20px;
}

.netlogo-tab.netlogo-active .netlogo-tab-caret {
  transform: translateY(-50%) scaleY(-1);
}

.netlogo-tab:not(:last-child) {
  border-bottom:       1px solid;
  border-bottom-color: inherit;
}

.netlogo-tab input[type='checkbox'] {
  display: none;
}

.netlogo-tab-text {
  font-size:        20px;
  font-weight:      bold;
  text-align:       center;
  user-select:      none;
  -moz-user-select: none;
}

.netlogo-tab-content {
  margin-top: 0;
  border:     0 solid #242479;
}

#console-panel {
  border-bottom: 1px solid var(--color-tab-border);
}

#code-panel {
  border-bottom: 1px solid var(--color-tab-border);
}

#info-panel {
  border-bottom: 1px solid var(--color-tab-border);
}

.unselectable {
  user-select:      none;
  -moz-user-select: none;
}

.netlogo-model-container {
  width:    min-content;
  position: relative;
}

.netlogo-model-text {
  background-color: white;
}

.netlogo-model-masthead {
  flex-grow: 1;
  margin:    0 10px 0 0;
  width:     350px;
}

.netlogo-model-masthead > form {
  margin: 0 auto;
}

.netlogo-model-status {
  position:      absolute;
  width:         auto;
  margin:        0 15%;
  padding:       0 20px;
  background:    #bcbce5;
  border-color:  #242479;
  border:        1px solid;
  border-top:    0;
  border-radius: 0 0 8px 8px;
  font-family:   var(--font-widget);
  font-size:     smaller;
}

.netlogo-model-status-closer {
  margin:      auto 0 auto 10px;
  width:       min-content;
  height:      min-content;
  cursor:      pointer;
  color:       #7f7f7f;
  font-weight: bold;
  user-select: none;
}

.netlogo-model-status-closer:hover {
  color: black;
}

.netlogo-model-status-link {
  color:  blue;
  cursor: pointer;
}

.netlogo-model-status-link:hover {
  text-decoration: underline;
}

.netlogo-model-title-wrapper {
  justify-content: center;
}

.netlogo-model-title {
  background-color: initial;
  margin:           0;
  overflow:         hidden;
  padding:          0 10px;
  text-align:       center;
  text-overflow:    ellipsis;
  white-space:      nowrap;
}

.netlogo-model-modified {
  display:         flex;
  justify-content: center;
  margin:          0;
  padding:         0 10px;
}

.hidden {
  visibility: hidden;
}

.netlogo-title-input {
  font-size:      1.5em;
  font-weight:    bold;
  letter-spacing: normal;
  margin:         0 5%;
  text-align:     center;
  width:          350px;
}

.netlogo-code-container {
  background-color: white;
  margin-top:       0;
}


.netlogo-recompilation-button {
  width:       30%;
  margin:      12px auto;
  font-size:   16px;
  font-weight: bold;
  cursor:      pointer;
}

.netlogo-procedurenames-dropdown {
  display: inline-block;
  width:   200px;
}

.netlogo-codetab-widget-list {
  padding: 0;
  margin:  12px 12px;
  display: inline;
}

.netlogo-codetab-widget-listitem {
  display: inline;
  padding: 6px;
}

.netlogo-autocomplete-label {
  font-size: 16px;
}

.netlogo-autocomplete-checkbox {
  width:  14px;
  height: 14px;
}

.netlogo-model-container-host {
  display: inline-block;
}

.netlogo-codeusage-popup {
  position:      absolute;
  z-index:       10;
  border:        1px solid #b2b2b2;
  background:    white;
  box-shadow:    3px 3px 2px #e9e9e9;
  border-radius: 4px;
  max-height:    15em;
  overflow-y:    auto;
}

.netlogo-codeusage-list {
  list-style:  none;
  margin-top:  1px;
  padding:     1px;
  font-size:   90%;
  font-family: monospace;
}

.netlogo-codeusage-item {
  padding: 1px;
}

.netlogo-codeusage-item:hover {
  color:         white;
  background:    #284570;
  border-radius: 2px;
}

.netlogo-info-editor {
  border: 1px solid black;
  height: 500px;
}

.netlogo-info {
  flex:        1;
  margin-top:  0;
  padding-top: 10px;
  padding:     15px;
}

.netlogo-command-center-container {
  display:        flex;
  flex-direction: column;
  width:          100%;
  height:         100%;
  margin:         0;
}

.netlogo-command-center {
  flex:           1;
  display:        flex;
  flex-direction: column;
  height:         175px;
  padding:        6px 8px;
}
/* ... */

